[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/menus/scripts/Pause.gd" type="Script" id=1]
[ext_resource path="res://Scenes/menus/scenes/paused.png" type="Texture" id=2]
[ext_resource path="res://Scenes/menus/scenes/menu_background.png" type="Texture" id=3]
[ext_resource path="res://Scenes/menus/scenes/continue.png" type="Texture" id=4]
[ext_resource path="res://Scenes/menus/scenes/quit.png" type="Texture" id=5]
[ext_resource path="res://Scenes/menus/scenes/options.png" type="Texture" id=6]
[ext_resource path="res://Scenes/menus/scenes/Alien Ravager.otf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Pause" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -8.0
margin_top = 95.0
margin_right = -8.0
margin_bottom = 95.0
color = Color( 0.109804, 0.0862745, 0.0862745, 1 )

[node name="Sprite" type="Sprite" parent="Background"]
position = Vector2( 958, 529 )
scale = Vector2( 0.389638, 0.389638 )
texture = ExtResource( 3 )

[node name="InnerContainer" type="ColorRect" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -641.0
margin_top = -272.0
margin_right = 1279.0
margin_bottom = 808.0
rect_scale = Vector2( 0.667336, 0.534693 )
color = Color( 0.584314, 0.592157, 0.717647, 0.168627 )

[node name="PausedLabel" type="Label" parent="InnerContainer"]
margin_left = 756.74
margin_top = 104.733
margin_right = 816.74
margin_bottom = 122.733
rect_scale = Vector2( 6.20304, 7.40343 )
theme = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="InnerContainer/PausedLabel"]
position = Vector2( 28.7474, 8.08374 )
scale = Vector2( 0.168417, 0.168417 )
texture = ExtResource( 2 )

[node name="ResumeButtton" type="Button" parent="InnerContainer"]
margin_left = 605.392
margin_top = 304.848
margin_right = 1610.39
margin_bottom = 503.848
rect_scale = Vector2( 0.690677, 0.690677 )
icon = ExtResource( 4 )
flat = true

[node name="OptionsButton" type="Button" parent="InnerContainer"]
margin_left = 606.891
margin_top = 482.52
margin_right = 1611.89
margin_bottom = 681.52
rect_scale = Vector2( 0.691, 0.691 )
icon = ExtResource( 6 )
flat = true

[node name="QuitButton" type="Button" parent="InnerContainer"]
margin_left = 609.888
margin_top = 665.803
margin_right = 1614.89
margin_bottom = 864.803
rect_scale = Vector2( 0.691, 0.691 )
icon = ExtResource( 5 )
flat = true

[connection signal="pressed" from="InnerContainer/ResumeButtton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="InnerContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="InnerContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
